--- a/index.html
+++ b/index.html
@@ -14,9 +14,19 @@
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
+
+
+
 <body>
 
-  <div class="page-container">
+  <!--create headers
+  create a container for the cards
+  create a container for the filters
+  create a container for the clear button
+  create a container for the cards
+ of the project-->  
+
+  <div class="container">
     <main id="content-wrap">
       <header id="header"></header>
       <div id="content">
@@ -27,6 +37,7 @@
         <div id="container" class="grid-container"></div>
       </div>
     </main>
+    <script src="script.js"></script>
   <footer>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
